--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "vue": "^3.3.8"
   },
   "devDependencies": {
+    "@types/node": "^20.10.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.17.1",
+    "unplugin-vue-components": "^0.25.2",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.22"
   }
