--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "vue": "^3.3.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
@@ -28,12 +30,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
+    "husky": "^8.0.0",
     "prettier": "^3.1.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^5.0.0",
-    "vue-tsc": "^1.8.22",
-    "husky": "^8.0.0"
+    "vue-tsc": "^1.8.22"
   }
 }
