--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "sass": "^1.69.5",
     "vue": "^3.3.8",
     "vue-router": "4"
   },
   "devDependencies": {
-    "@types/nprogress": "0.2.0",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20.10.0",
+    "@types/nprogress": "0.2.0",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-vue": "^4.5.0",
