--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commitlint": "commitlint --config commitlint.config.cjs -e -V"
   },
   "dependencies": {
+    "@arco-themes/vue-sqraycss": "^0.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
@@ -25,6 +26,8 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.53.3",
+    "@arco-plugins/vite-vue": "^1.4.5",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/node": "^20.10.0",
@@ -37,6 +40,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.0",
+    "less": "^4.2.0",
     "prettier": "^3.1.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.1",
