--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-vue": "^4.5.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.0",
     "less": "^4.2.0",
+    "postcss": "^8.4.31",
     "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.1",
     "unplugin-vue-components": "^0.25.2",
