--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
     "vue": "^3.3.8",
+    "vue-i18n": "^9.8.0",
     "vue-router": "4"
   },
   "devDependencies": {
