--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@arco-themes/vue-sqraycss": "^0.0.1",
     "@vueuse/core": "^10.6.1",
+    "axios": "^1.6.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
