--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sass": "^1.69.5",
     "vue": "^3.3.8",
     "vue-i18n": "^9.8.0",
-    "vue-router": "4"
+    "vue-router": "4",
+    "typeit": "^8.7.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
