--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
+    "typeit": "^8.7.1",
     "vue": "^3.3.8",
     "vue-i18n": "^9.8.0",
     "vue-router": "4",
-    "typeit": "^8.7.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
