--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "axios": "^1.6.2",
     "element-plus": "^2.4.3",
     "nprogress": "^0.2.0",
+    "particles.vue3": "^2.12.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
+    "tsparticles-slim": "^2.12.0",
     "typeit": "^8.7.1",
     "vue": "^3.3.8",
     "vue-i18n": "^9.8.0",
