--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "api": "rimraf ./src/servicesDefault && pont list"
   },
   "dependencies": {
+    "@types/openseadragon": "^3.0.10",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "element-plus": "^2.4.3",
     "nprogress": "^0.2.0",
+    "openseadragon": "^4.1.0",
     "particles.vue3": "^2.12.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
