--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@types/openseadragon": "^3.0.10",
+    "@types/three": "^0.159.0",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
     "element-plus": "^2.4.3",
@@ -28,6 +29,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.0",
     "sass": "^1.69.5",
+    "three": "^0.159.0",
     "tsparticles-slim": "^2.12.0",
     "typeit": "^8.7.1",
     "vue": "^3.3.8",
