--- a/.env.development
+++ b/.env.development
@@ -5,4 +5,8 @@ VITE_ENV=development
 VITE_APP_NAME=production
 
 # 接口地址
-VITE_API=http://192.168.20.44:7004/
+VITE_API=http://8.140.18.95:7004/
+
+
+# 项目版本号
+VITE__APP_VERSION__=
