--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/three": "^0.159.0",
     "@vueuse/core": "^10.6.1",
     "axios": "^1.6.2",
+    "dragselect": "^3.0.4",
     "element-plus": "^2.4.3",
     "nprogress": "^0.2.0",
     "openseadragon": "^2.4.2",
