--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["Vue.volar", "lokalise.i18n-ally", "bradlc.vscode-tailwindcss"]
+  "recommendations": ["Vue.volar", "bradlc.vscode-tailwindcss"]
 }
